--- a/css/style.css
+++ b/css/style.css
@@ -273,14 +273,14 @@ button {
 }
 
 /* ===== ONDA INFERIOR ===== */
-.banner_wave {
+/*.banner_wave {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 140px;
   z-index: 2;
-}
+}*/
 
 
 .banner_section {
@@ -523,14 +523,14 @@ button {
 .naty_cta {
   display: inline-block;
   padding: 0.9rem 2.5rem;
-  border: 1px solid #5e2129;
+  border: 1px solid #214436;
   text-decoration: none;
   font-weight: 500;
   transition: all 0.3s ease;
 }
 
 .naty_cta:hover {
-  background: #5e2129;
+  background: #214436;
   color: #fff;
 }
 
@@ -1604,7 +1604,7 @@ button {
 .input_btn_main {
     width: 50%;
     display: flex;
-    background-color: #5e2129;
+    background-color: #214436;
     border-radius: 40px;
     padding: 8px 0px;
     margin: 0 auto;
@@ -1690,7 +1690,7 @@ button {
 .copyright_section {
     width: 100%;
     float: left;
-    background-color: #5e2129  ;
+    background-color: #214436  ;
     height: auto;
 }
 
